adds A* with manhattandistance as heuristic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>                
             </div>
               
-            <path-finding-simulator algo="djk" title="djk"></path-finding-simulator>
+            <path-finding-simulator algo="astar" title="watashiwastar"></path-finding-simulator>
         
             <script type="module">
                 import './simulator.js';
