--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <button class="dropdown-btn" data-algo="bfs" data-title="BFS">BFS</button>
                     <button class="dropdown-btn" data-algo="dfs" data-title="DFS">DFS</button>
                     <button class="dropdown-btn" data-algo="djk" data-title="Djkstra's">Djkstra's</button>
-                    <button class="dropdown-btn" data-algo="astar" data-title="A* - Manhattan Distance">A* - Manhattan Distance</button>
+                    <button class="dropdown-btn" data-algo="astar" data-title="A* - Manhattan Distance">A*</button>
                 </div>                
             </div>
             
