adds addweight feature

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             
             <draggable-element>
-                <path-finding-simulator algo="astar" title="watashiwastar">
+                <path-finding-simulator algo="djk" title="djkhaled">
                 </path-finding-simulator>
             </draggable-element>
             
