--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         window.pan.y = (viewportRect.height - world.offsetHeight) / 2;
         updateTransform();
         // Add a default simulator on load
-        newSim({ algo: 'djk', title: 'djkhaled' });
+        newSim({ algo: 'djk', title: 'Guess the algo' });
         
         const fabButton = document.querySelector('.fab-button');
         const dropdownButtons = document.querySelectorAll('.fab-dropdown .dropdown-btn');
