--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dotted World with Pan, Zoom, and Drag</title>
+  <title>Algorithms Simulator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./styles.css">
+  <link rel="icon" href="assets/logo.png">
 
 </head>
 <body>
