--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div id="world">
       <div class="world-header">
        <h4>Click upper-right button to Start!</h4> 
+       <p>Try Interacting with the graphs!</p>
+       <p>Add walls, move points, change dimensions.</p>
        <p>Press reset after changing rows or cols</p> 
       </div>
     </div>
